<resources>
    <string name="app_name">Ligas Madrid</string>
    <string name="loading">Cargando</string>
    <string name="loading_competitions">Actualizando las competiciones</string>
    <string name="loading_info">Actualizando la información</string>
    <string name="loading_team">cargando</string>
    <string name="loading_search">Buscando equipos</string>
    <string name="template_text" translatable="false">On July 16, 1969, the Apollo 11 spacecraft launched from the Kennedy Space Center in Florida. Its mission was to go where no human being had gone before—the moon! The crew consisted of Neil Armstrong, Michael Collins, and Buzz Aldrin. The spacecraft landed on the moon in the Sea of Tranquility, a basaltic flood plain, on July 20, 1969. The moonwalk took place the following day. On July 21, 1969, at precisely 10:56 EDT, Commander Neil Armstrong emerged from the Lunar Module and took his famous first step onto the moon’s surface. He declared, “That’s one small step for man, one giant leap for mankind.” It was a monumental moment in human history!</string>
    <string name="favorites">Favoritos</string>
    <string name="favorites_subtitle">Favoritos</string>
    <string name="favorites_competition_added">Se añadió la competición a la lista de favoritos.</string>
    <string name="favorites_competition_removed">Se eliminó la competición de la lista de favoritos.</string>
    <string name="favorites_team_added">Se añadió el equipo a la lista de favoritos.</string>
    <string name="favorites_team_removed">Se eliminó el equipo de la lista de favoritos.</string>
    <string name="error_getting_data">Error al obtener los datos.</string>
    <string name="error_searching">Error al realizar la busqueda.</string>
    <string name="type_team">Equipo</string>
    <string name="type_competicion">Competición</string>

    <string name="title_district">Distritos</string>
    <string name="title_category">Categorías</string>
    <string name="title_grupo">Grupos</string>
    <string name="title_about">Acerca de</string>

    <string name="menu_home">Volver Inicio</string>

    <string name="classification_header_team">Equipo</string>
    <string name="classification_header_matches">PJ</string>
    <string name="classification_header_matches_won">PG</string>
    <string name="classification_header_matches_drawn">PE</string>
    <string name="classification_header_matches_lost">PP</string>
    <string name="classification_header_goals_favor">TF</string>
    <string name="classification_header_goals_against">TC</string>
    <string name="classification_header_points">PT</string>
    <string name="RESTING">(descansa)</string>


    <string name="BALONCESTO">Baloncesto</string>
    <string name="BALONMANO">Balonmano</string>
    <string name="BEISBOL">Beisbol</string>
    <string name="FUTBOL">Futbol</string>
    <string name="FUTBOL_SALA">Futbol Sala</string>
    <string name="FUTBOL_7">Futbol 7</string>
    <string name="HOCKEY" translatable="false">Hockey</string>
    <string name="MINIBALONCESTO">MiniBaloncesto</string>
    <string name="RUGBY" translatable="false">Rugby</string>
    <string name="VOLEIBOL">Voleibol</string>
    <string name="WATERPOLO" translatable="false">Waterpolo</string>

    <string name="BALONCESTO_IMG" translatable="false">ball_basketball</string>
    <string name="BALONMANO_IMG" translatable="false">ball_handball</string>
    <string name="BEISBOL_IMG" translatable="false">ball_baseball</string>
    <string name="FUTBOL_IMG" translatable="false">ball_football</string>
    <string name="FUTBOL_SALA_IMG" translatable="false">ball_football</string>
    <string name="FUTBOL_7_IMG" translatable="false">ball_football</string>
    <string name="HOCKEY_IMG" translatable="false">ball_hockey</string>
    <string name="MINIBALONCESTO_IMG" translatable="false">ball_basketball</string>
    <string name="RUGBY_IMG" translatable="false">ball_rugby</string>
    <string name="VOLEIBOL_IMG" translatable="false">ball_voleibol</string>
    <string name="WATERPOLO_IMG" translatable="false">ball_waterpolo</string>
    <string name="action_sync">Sincronizar</string>
    <string name="action_sync_with_date">Sincronizar (%1$s)</string>
    <string name="action_preferences">Configuración</string>
    <string name="action_about">Acerca de</string>

    <string name="pref_competitions_num_key" translatable="false">pref_competitions_num_key</string>
    <string name="pref_competitions_num_title">Mostrar información extra</string>
    <string name="pref_competitions_num_default" translatable="false">false</string>
    <string name="pref_competitions_num_summary">Se muestra información adicional como el número de grupos de cada deporte o identificador de los grupos.</string>

    <string name="pref_notifications_key" translatable="false">pref_notifications_key</string>
    <string name="pref_notifications_title">Activar notificationes</string>
    <string name="pref_notifications_default" translatable="false">true</string>
    <string name="pref_notifications_summary">Se recibirá una notificación cuando se actualice la información de su equipo o grupo favoritos, por ejemplo un cambio de horario o un resultado.</string>
    <string name="pref_year_title">Eliga la temporada</string>
    <string name="pref_year_key" translatable="false">pref_year_key</string>
    <string name="pref_year_default" translatable="false">2018</string>


    <string name="pref_last_udpate" translatable="false">pref_last_update</string>
    <string name="pref_need_update" translatable="false">pref_need_update</string>


    <string name="team_subtitle">Grupo: %1$s</string>
    <string name="team_details_tab_information">Información</string>
    <string name="team_details_tab_calendar">Calendario</string>
    <string name="team_details_tab_classification">Clasificación</string>
    <string name="team_details_tab_grupos">Grupos</string>

    <string name="team_details_info_district">Distrito</string>
    <string name="team_details_info_categoria">Categoría</string>
    <string name="team_details_info_sport">Deporte</string>
    <string name="team_details_info_competition">Competición</string>
    <string name="team_details_info_fase">Fase</string>
    <string name="team_details_info_grupo">Grupo</string>

    <string name="team_details_next_match">Próximo partido</string>
    <string name="team_details_next_match_finished">*No hay ningún partido pendiente.</string>


    <string name="group_details_calendar">Calendario</string>
    <string name="group_details_classification">Clasificación</string>
    <string name="group_details_teams">Equipos</string>

    <string name="calendar_date">Fecha</string>
    <string name="calendar_place">Pista</string>
    <string name="calendar_state">Estado</string>
    <string name="calendar_result">Resultado</string>
    <string name="calendar_openent">Rival</string>
    <string name="calendar_week">Jornada %1$d</string>
    <string name="calendar_local">Local</string>
    <string name="calendar_visitor">Visitante</string>
    <string name="calendar_score" translatable="false">%1$d - %2$d</string>

    <string name="example_date" translatable="false">12/02/1977 12:30</string>
    <string name="example_place" translatable="false">Estadio Vicente Calderon</string>
    <string name="example_state" translatable="false">Finalizado</string>
    <string name="example_last_week_score" translatable="false">Resultado: victoria 3 - 1</string>
    <string name="example_last_week_opponent" translatable="false">Rival: Villaconejos</string>
    <string name="example_fase" translatable="false">Fase Regular</string>
    <string name="example_team" translatable="false">Atletico de Madrid</string>
    <string name="example_group" translatable="false">Grupo Sábados Tarde</string>
    <string name="example_competition" translatable="false">Campeonato Nacional de Liga</string>
    <string name="example_sport" translatable="false">Baloncesto</string>
    <string name="example_path" translatable="false">Baloncesto > Chamartín > Benjamin</string>
    <string name="example_week" translatable="false">Jornada 12</string>

    <string name="PENDIENTE">Pendiente</string>
    <string name="REPROGRAMADO">Reprogramado</string>
    <string name="COMITE">Comité</string>
    <string name="FINALIZADO">Finalizado</string>
    <string name="SUSPENDIDO">Suspendido</string>
    <string name="NO_PRESENTADO">No presentado</string>
    <string name="APLAZADO">Aplazado</string>
    <string name="DESCONOCIDO">Desconocido</string>
    <string name="DESCANSA">Descansa</string>

    <string name="label_fase">Fase</string>
    <string name="label_competition">Competición</string>
    <string name="label_group">Grupo</string>
    <string name="label_sport">Deporte</string>
    <string name="label_team">Equipo</string>
    <string name="emptyFavList">No hay equipos ni grupos marcados como favoritos</string>
    <string name="emptyTeamList">No se han encontrado equipos con este nombre</string>

    <string name="search_hint">nombre del equipo</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_add_calendar">Añadir evento al calendario</string>
    <string name="menu_view_map">Abrir mapa</string>
    <string name="menu_share_details">Compartir</string>
    <string name="menu_notify_error">Notificar error</string>

    <string name="no_match_event">No se puede crear el evento hasta que no haya fecha.</string>
    <string name="no_match_address">Todavia no se ha definido el centro deportivo.</string>

    <string name="calendar_title">%1$s, Jornada %2$s: %3$s - %4$s</string>
    <string name="match_description">Competición: %1$s (%2$s - %3$s). Jornada %4$s: %5$s - %6$s. Fecha: %7$s. Lugar: %8$s.</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="main_notification_channel_name" translatable="false">Primary</string>

    <string name="update_notification_title">Ligas Madrid: actualización</string>
    <string name="general_notification_title" translatable="false">Ligas Madrid</string>
    <string name="update_competition_notification_body">Competición: <b>%1$s</b> (%2$s - %3$s).</string>
    <string name="update_team_notification_body">Equipo: <b>%1$s</b> (%2$s - %3$s).</string>


    <string name="pref_year_2017_label">Temporada 2016 / 2017</string>
    <string name="pref_year_2018_label">Temporada 2017 / 2018</string>
    <string name="pref_year_2019_label">Temporada 2018 / 2019</string>
    <string name="pref_year_2017_value" translatable="false">2016</string>
    <string name="pref_year_2018_value" translatable="false">2017</string>
    <string name="pref_year_2019_value" translatable="false">2018</string>
    <string name="url_2017" translatable="false">https://deportes-madrid-2017.appspot.com</string>
    <string name="url_2018" translatable="false">https://deportes-madrid-2018.appspot.com</string>
    <string name="url_2019" translatable="false">https://deportes-madrid-2019.appspot.com</string>


    <string name="about_thanks">Esta aplicación es posible gracias a el programa <b>\"Datos Abiertos\"</b> del Ayuntamiento de Madrid. https://datos.madrid.es</string>
    <string name="example_about_version" translatable="false">1.1.1.snapshot</string>
    <string name="about_developer">Desarrollador</string>
    <string name="about_me" translatable="false">Antonio Díaz Arroyo</string>
    <string name="about_email_label" translatable="false">Email</string>
    <string name="about_email" translatable="false">antonio.diaz.arroyo@gmail.com</string>
    <string name="about_version_label">Versión</string>

</resources>
