<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_favorites"
        style="@style/main_list_sports"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/tv_group_label"
                style="@style/list_labels"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="4dp"
                android:gravity="right|center_vertical"
                android:text="@string/label_group"
                app:layout_constraintBottom_toBottomOf="@+id/tv_group"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_group" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tv_group"
                style="@style/list_headers_accent"
                android:layout_height="22dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:autoSizeMinTextSize="10sp"
                android:gravity="left|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/example_group" />

            <TextView
                android:id="@+id/tv_label_fase"
                style="@style/list_labels"
                android:layout_marginTop="8dp"
                android:gravity="right|center_vertical"
                android:text="@string/label_fase"
                app:layout_constraintEnd_toEndOf="@+id/tv_group_label"
                app:layout_constraintStart_toStartOf="@+id/tv_group_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_label" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tv_fase"
                style="@style/list_values"
                android:layout_height="20dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_group"
                app:layout_constraintStart_toStartOf="@+id/tv_group"
                app:layout_constraintTop_toTopOf="@+id/tv_label_fase"
                tools:text="@string/example_fase" />

            <TextView
                android:id="@+id/tv_label_competition"
                style="@style/list_labels"
                android:layout_marginTop="8dp"
                android:gravity="right|center_vertical"
                android:text="@string/label_competition"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_fase"
                app:layout_constraintStart_toStartOf="@+id/tv_label_fase"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_fase" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tv_competition"
                style="@style/list_values"
                android:layout_height="20dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_fase"
                app:layout_constraintStart_toStartOf="@+id/tv_fase"
                app:layout_constraintTop_toTopOf="@+id/tv_label_competition"
                tools:text="@string/example_competition" />

            <TextView
                android:id="@+id/tv_label_sport"
                style="@style/list_labels"
                android:layout_marginTop="8dp"
                android:text="@string/label_sport"
                android:gravity="right|center_vertical"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_competition"
                app:layout_constraintStart_toStartOf="@+id/tv_label_competition"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_competition" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tv_sport"
                style="@style/list_values"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccentDark"
                app:layout_constraintEnd_toEndOf="@+id/tv_competition"
                app:layout_constraintStart_toStartOf="@+id/tv_competition"
                app:layout_constraintTop_toTopOf="@+id/tv_label_sport"
                tools:text="@string/example_sport" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
