<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_listitem"
        style="@style/main_list_generic">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />


            <TextView
                android:id="@+id/textView2"
                style="@style/list_labels"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="right|center_vertical"
                android:text="@string/label_group"
                app:layout_constraintBottom_toBottomOf="@+id/tv_listitem_title"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_listitem_title" />

            <me.grantland.widget.AutofitTextView
                android:id="@+id/tv_listitem_title"
                style="@style/list_headers"
                android:autoSizeMinTextSize="8sp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/example_group" />

            <TextView
                android:id="@+id/tv_competition_label"
                style="@style/list_labels"
                android:gravity="right|center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_competition"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_listitem_title" />


            <TextView
                android:id="@+id/tv_competition"
                style="@style/list_values"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/tv_competition_label"
                tools:text="@string/example_competition" />

            <TextView
                android:id="@+id/tv_fase_label"
                style="@style/list_labels"
                android:gravity="right|center_vertical"
                android:layout_marginTop="8dp"
                android:text="@string/label_fase"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/tv_competition_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_competition_label" />

            <TextView
                android:id="@+id/tv_fase"
                style="@style/list_values"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/tv_fase_label"
                tools:text="@string/example_fase" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>
