<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/main_list_generic">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clTeamCalendar">


            <TextView
                android:id="@+id/tvWeek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Jornada 01" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <TextView
                android:id="@+id/tvLocalVisitor"
                style="@style/list_values"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="left|center_horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/tvWeek"
                app:layout_constraintEnd_toStartOf="@+id/tvScore"
                app:layout_constraintStart_toEndOf="@+id/tvWeek"
                app:layout_constraintTop_toTopOf="@+id/tvWeek"
                tools:text="Local" />

            <TextView
                android:id="@+id/tvOpponentLabel"
                android:layout_marginTop="4dp"
                android:text="@string/calendar_openent"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/tvWeek"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                style="@style/list_labels" />

            <TextView
                android:id="@+id/tvOpponent"
                style="@style/list_values"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/tvOpponentLabel"
                tools:text="Club Atletico de Madrid." />

            <TextView
                android:id="@+id/tv_date_label"
                android:layout_marginTop="4dp"
                android:text="@string/calendar_date"
                app:layout_constraintEnd_toEndOf="@+id/tvOpponentLabel"
                app:layout_constraintStart_toStartOf="@+id/tvOpponentLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvOpponentLabel"
                style="@style/list_labels"/>

            <TextView
                android:id="@+id/tvDate"
                app:layout_constraintEnd_toEndOf="@+id/tvOpponent"
                app:layout_constraintStart_toStartOf="@+id/tvOpponent"
                app:layout_constraintTop_toTopOf="@+id/tv_date_label"
                tools:text="@string/example_date"
                style="@style/list_values"/>

            <TextView
                android:id="@+id/tvPlaceLabel"
                android:layout_marginTop="4dp"
                android:text="@string/calendar_place"
                app:layout_constraintEnd_toEndOf="@+id/tv_date_label"
                app:layout_constraintStart_toStartOf="@+id/tv_date_label"
                app:layout_constraintTop_toBottomOf="@+id/tv_date_label"
                style="@style/list_labels"/>

            <TextView
                android:id="@+id/tvPlace"
                app:layout_constraintEnd_toEndOf="@+id/tvDate"
                app:layout_constraintStart_toStartOf="@+id/tvDate"
                app:layout_constraintTop_toTopOf="@+id/tvPlaceLabel"
                tools:text="@string/example_place"
                style="@style/list_values"/>

            <TextView
                android:id="@+id/tv_state_label"
                android:layout_marginTop="4dp"
                android:text="@string/calendar_state"
                app:layout_constraintEnd_toEndOf="@+id/tvPlaceLabel"
                app:layout_constraintStart_toStartOf="@+id/tvPlaceLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvPlaceLabel"
                style="@style/list_labels"/>

            <TextView
                android:id="@+id/tvState"
                app:layout_constraintEnd_toEndOf="@+id/tvPlace"
                app:layout_constraintStart_toStartOf="@+id/tvPlace"
                app:layout_constraintTop_toTopOf="@+id/tv_state_label"
                style="@style/list_values"
                tools:text="@string/example_state" />

            <View
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeek"/>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:maxLines="1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvLocalVisitor"
                app:layout_constraintEnd_toStartOf="@+id/ivThumbVictory"
                app:layout_constraintTop_toTopOf="@+id/tvLocalVisitor"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                tools:text="110 - 99" />

            <ImageView
                android:id="@+id/ivThumbVictory"
                android:layout_width="23dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/tvScore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvScore" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>
