<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:padding="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cl_result">

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        app:layout_constraintHorizontal_bias="0.2" />

    <TextView
        android:id="@+id/tv_label_date"
        style="@style/TextDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/calendar_date"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label_place"
        style="@style/TextDetails"
        android:text="@string/calendar_place"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/tv_label_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_date" />

    <TextView
        android:id="@+id/tv_label_state"
        style="@style/TextDetails"
        android:text="@string/calendar_state"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/tv_label_place"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_place" />

    <TextView
        android:id="@+id/tv_calendar_date"
        style="@style/TextDetails"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_place"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/tv_label_date"
        tools:text="12/02/1977 12:30 pm" />

    <TextView
        android:id="@+id/tv_calendar_place"
        style="@style/TextDetails"
        app:layout_constraintBottom_toTopOf="@+id/tv_label_state"
        app:layout_constraintEnd_toEndOf="@+id/tv_calendar_date"
        app:layout_constraintStart_toStartOf="@+id/tv_calendar_date"
        app:layout_constraintTop_toTopOf="@+id/tv_label_place"
        tools:text="Estadio Vicente Calderon (Madrid españa)" />

    <TextView
        android:id="@+id/tv_state"
        style="@style/TextDetails"
        app:layout_constraintBottom_toBottomOf="@+id/tv_label_state"
        app:layout_constraintEnd_toEndOf="@+id/tv_calendar_place"
        app:layout_constraintStart_toStartOf="@+id/tv_calendar_place"
        app:layout_constraintTop_toTopOf="@+id/tv_label_state"
        tools:text="Finalizado" />


</android.support.constraint.ConstraintLayout>